# kaggle-competition-predicting-f1-pit-stops

./: .gitignore  README.md  pyproject.toml
notebooks/: 2.0_feature_engineering.ipynb  3.0_lightgbm_machine_learning.ipynb  3.0_voting_machine_learning.ipynb  3.1_xgboost_machine_learning.ipynb  3.2_logistic_regression_machine_learning.ipynb  3.3_catboost_machine_learning.ipynb  3.3_histgradientboosting_machine_learning.ipynb  3.6_tabnet_machine_learning.ipynb  4.0_creating_data_base.ipynb  4.0_stacking_submission.ipynb  4.1_creating_data_base.ipynb  4.1_stacking_submission.ipynb  4.2_creating_data_base.ipynb  5.0.0_stacking_submission.ipynb  5.0.1_stacking_submission.ipynb  5.1.0_stacking_submission.ipynb  5.1.1_stacking_submission.ipynb  5.1.2_stacking_submission.ipynb  5.1.3_stacking_submission.ipynb  5.1.4_stacking_submission.ipynb  5.2.0_stacking_submission.ipynb
src/: catboost_tuning.py  extra_tree_tuning.py  hist_gradient_boosting_tuning.py  knn_tuning.py  lightgbm_tuning.py  logistic_regression_tuning.py  pca_tuning.py  ridge_tuning.py  svc_tuning.py  xgboost_tuning.py
